@@ -1,3 +1,5 @@
+* Add support for search_* attributes in ModelList
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Add set_sequence method to ModelList
